implement authorize API, Project bug report